# PseuToPy

./: .gitignore  .travis.yml  LICENSE  MANIFEST.in  README.rst  cli.py  conftest.py  pseutopy.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  test1.py  test_fr.txt
.github/workflows/: python-app.yml
docs/source/: conf.py  features.rst  grammar.rst  home.rst  index.rst  installing.rst  usage.rst
pseutopy/: pseudocode.tx  pseutopy.py
pseutopy/generators/: expressions.py  statements.py  values.py
src/pseutopy/: exceptions.py  grammar_parser.py  pseudocode-fr.tx  pseudocode.tx  pseutopy.py
tests/: test_all_fr_grammar.py  test_arith_expr.py  test_assign.py  test_atoms.py  test_augAssign.py  test_bool.py  test_chained_assignment.py  test_comps.py  test_declare_statement.py  test_for_stmt.py  test_funcdef.py  test_function_call_assignment.py  test_if_stmt.py  test_parenthesis_calcul.py  test_power.py  test_simple_chained_assignment.py  test_statements.py  test_while_stmt.py  tmp_test_chained_assignment.py  tmp_test_function_call_assignment.py  tmp_test_simple_chained_assignment.py  tmp_test_statements.py  utils.py
tests/tests_ast_parser/: test_atoms.py  test_debug.py  test_parser_arith_expr.py  test_parser_assign.py  test_parser_atoms.py  test_parser_aug_assign.py  test_parser_bool_op.py  test_parser_compare.py  test_parser_for_stmt.py  test_parser_funccall.py  test_parser_funcdef.py  test_parser_get_item.py  test_parser_if_stmt.py  test_parser_unary_op.py  test_parser_while_stmt.py
tests/tests_grammar/: test_arith_expr.py  test_assign.py  test_atoms.py  test_bool.py  (+6 more)
(+13 files in other folders)
