[metadata]
name = pseutopy
version = 3.0.4
author = Patrick Wang
author_email = patrick.wang@pseutopy.com
description = PseuToPy is a package that transpiles pseudocode into its equivalent Python code
long_description = README.rst
url = https://github.com/PseuToPy/PseuToPy
project_urls =
    Bug Tracker = https://github.com/PseuToPy/PseuToPy/issues
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Education
    Topic :: Education
    Programming Language :: Python :: 3

[options]
package_dir =
    = src
packages = find:
python_requires = >= 3.6
install_requires =
    astor == 0.8.0
    lark-parser == 0.11.2

[options.packages.find]
where = src
